Fixed layout issue in product listing of admin

--- a/web/bundles/lovethatfit/admin/css/admin.css
+++ b/web/bundles/lovethatfit/admin/css/admin.css
@@ -74,4 +74,8 @@ border-right:0px solid #ccc;
 	min-height:40px!important;
 }
 
+.product_main .span1 {
+    width: 11.10%!important;
+}
+
 
